--- a/WebsiteBanDoGiaDung/Views/Account/OrderDetails.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Account/OrderDetails.cshtml
@@ -62,10 +62,14 @@
                                     <td>@ViewBag.Order.DeliveryPhone</td>
                                 </tr>
                                 <tr>
+                                    <td class="text-secondary">Địa chỉ nhận hàng</td>
+                                    <td>@ViewBag.Order.DeliveryAddress</td>
+                                </tr>
+                                <tr>
                                     <td class="text-secondary">Thời gian đặt:</td>
                                     <td>@ViewBag.Order.CreateDate</td>
                                 </tr>
-                                
+
                             </table>
                         </div>
                         <div class="col-12 mt-3">
