--- a/WebsiteBanDoGiaDung/Views/Cart/Checkout.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Cart/Checkout.cshtml
@@ -37,7 +37,6 @@
                 <div class="col-6 profile">
                     Thông tin giao hàng
                     <hr>
-                    <form action="" method="post" ></form>
                     <div class="row">
                         <div class="col-3 text-right my-3">Họ tên</div>
                         <div class="col-9 my-2">
@@ -62,7 +61,7 @@
                     <div class="row">
                         <div class="col-3 text-right my-3">Địa chỉ</div>
                         <div class="col-9 my-2">
-                            <input id="address" name="Address" type="text" class="form-control rounded-0"
+                            <input id="address" name="Address1" type="text" class="form-control rounded-0"
                                    value="@ViewBag.Info.Address">
                         </div>
                     </div>
