--- a/WebsiteBanDoGiaDung/Views/Cart/Checkout.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Cart/Checkout.cshtml
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-3 text-right my-3">Email</div>
                         <div class="col-9 my-2">
-                            <input id="email" name="Email" type="text" class="form-control rounded-0"
+                            <input id="email" name="Email1" type="text" class="form-control rounded-0"
                                    value="@ViewBag.Info.Email">
                         </div>
                     </div>
