--- a/WebsiteBanDoGiaDung/Views/Module/_Login.cshtml
+++ b/WebsiteBanDoGiaDung/Views/Module/_Login.cshtml
@@ -65,7 +65,7 @@ else
                             <div class="form-row">
                                 <div class="col-md-12 mb-3">
                                     <label class="text-muted mini-s-c pl-2">Họ và tên</label>
-                                    <input type="text" class="form-control ten" placeholder="" value="" required
+                                    <input type="text" class="form-control ten" placeholder=""  required
                                            name="ten" id="FullName">
                                     <div class="invalid-feedback">
                                         Tên không được trống
@@ -75,7 +75,7 @@ else
                             <div class="form-row">
                                 <div class="col-md-12 mb-3">
                                     <label class="text-muted mini-s-c pl-2">Tên truy cập</label>
-                                    <input type="text" class="form-control ten" placeholder="" value="" required
+                                    <input type="text" class="form-control ten" placeholder=""  required
                                            name="ten" id="Name">
                                     <div class="invalid-feedback">
                                         Tên truy cập không được trống
@@ -85,7 +85,7 @@ else
                             <div class="form-row">
                                 <div class="col-md-12 mb-3">
                                     <label class="text-muted mini-s-c pl-2">Email</label>
-                                    <input type="email" class="form-control email" placeholder="" value="" required
+                                    <input type="email" class="form-control email" placeholder=""  required
                                            name="Email" id="Email">
                                     <div class="invalid-feedback">
                                         Email không được để trống
@@ -95,7 +95,7 @@ else
                             <div class="form-row">
                                 <div class="col-md-12 mb-3">
                                     <label class="text-muted mini-s-c pl-2">Địa chỉ</label>
-                                    <input type="text" class="form-control address" placeholder="" value="" required
+                                    <input type="text" class="form-control address" placeholder="" required
                                            name="Address" id="Address">
                                     <div class="invalid-feedback">
                                         Địa chỉ không được để trống
