--- a/WebsiteBanDoGiaDung/Areas/Admin/Views/Order/Index.cshtml
+++ b/WebsiteBanDoGiaDung/Areas/Admin/Views/Order/Index.cshtml
@@ -25,16 +25,16 @@
             </div>
             <!-- /.card-header -->
             <div class="card-body">
-                <table id="cate1" class="table table-bordered table-hover" style="font-size:15px">
+                <table id="product" class="table table-bordered table-hover" style="font-size:15px">
                     <thead>
                         <tr>
                             <th class="text-center no-sort text-dark" style="width:3rem;">#</th>
-                            <th class="text-primama"> Khách hàng </th>
-                            <th class="no-sort text-primama text-center">Trạng thái</th>
-                            <th class="no-sort text-primama text-right">Tổng tiền</th>
-                            <th class="no-sort text-primama">Ngày Đặt</th>
-                            <th class="no-sort text-primama">ExportDate</th>
-                            <th class="no-sort text-center text-primama" style="width:10rem">Action</th>
+                            <th class="no-sort"> Khách hàng </th>
+                            <th class="no-sort text-center">Trạng thái</th>
+                            <th class="no-sort text-right">Tổng tiền</th>
+                            <th class="">Ngày Đặt</th>
+                            <th class="no-sort">ExportDate</th>
+                            <th class="no-sort text-center" style="width:10rem">Action</th>
                         </tr>
                     </thead>
                     <tbody>
