--- a/WebsiteBanDoGiaDung/Areas/Admin/Views/Auth/Login.cshtml
+++ b/WebsiteBanDoGiaDung/Areas/Admin/Views/Auth/Login.cshtml
@@ -23,7 +23,7 @@
     <div class="overlay justify-content-center align-items-center d-none bg-secondary w-100 h-100 position-absolute" style="z-index:1; opacity:.3"><i class="fas fa-2x fa-sync fa-spin"></i></div>
     <div class="login-box">
         <div class="login-logo">
-            <img src="~/Public/Admin/images/user2-160x160.jpg" class="d-block rounded-circle mx-auto" width="80" />
+            <img src="https://th.bing.com/th/id/OIP.vnO3RuGQRngLJh_xN46A_wHaFQ?w=250&h=180&c=7&r=0&o=5&pid=1.7" class="d-block rounded-circle mx-auto" width="80" />
             <a href="javascript:void(0)" class="text-light"> <b> Administrator</b></a>
         </div>
         <div class="card">
