--- a/WebsiteBanDoGiaDung/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebsiteBanDoGiaDung/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -89,7 +89,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <a href="~/Admin" class="brand-link">
                 <img src="~/Public/Admin/images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">Quản Trị</span>
+                <span class="brand-text font-weight-light">TH FOOD</span>
             </a>
             <style>
                 #menu a {
@@ -474,8 +474,7 @@
         <div class="float-right d-none d-sm-block">
 
         </div>
-        <strong>Copyright &copy; 2014-2019 <a href="#">Hoàng Dũng</a>.</strong> All rights
-        reserved.
+        
     </footer>
 
 
