--- a/WebsiteBanDoGiaDung/Areas/Admin/Views/Product/Index.cshtml
+++ b/WebsiteBanDoGiaDung/Areas/Admin/Views/Product/Index.cshtml
@@ -36,6 +36,7 @@
                             <th class="no-sort text-center" style="width:3rem;">ID</th>
                             <th class="no-sort text-center">Hình ảnh</th>
                             <th class="no-sort">Tên sản phẩm</th>
+                            <th class="no-sort">Chi nhánh</th>
                             <th class="no-sort">Danh mục</th>
                             <th class="no-sort">Khuyến mãi</th>
                             <th class="no-sort text-center" style="width:10rem">Action</th>
@@ -45,39 +46,91 @@
                         @{var stt = 1;}
                         @foreach (var item in Model)
                         {
-                        <tr>
-                            <td>@stt</td>
-                            <td class="text-center">@Html.DisplayFor(modelItem => item.ProductId)</td>
-                            <td><img src="~/Public/images/products/@Html.DisplayFor(modelItem => item.ProductImg)" alt="Error" width="70" class="d-block m-auto" />  </td>
-                            <td><a href="~/Admin/Product/Details/@item.ProductId">@Html.DisplayFor(modelItem => item.ProductName)</a>  </td>
-                            <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
-                            <td class="text-center">
-                                <label class="switch">
-                                    @if (item.ProductDiscount == 1)
-                                    {<input class="changeDiscount" data-id="@item.ProductId" data-controller="Product" type="checkbox" checked>}
-                                    else
-                                    {<input class="changeDiscount" data-id="@item.ProductId" data-controller="Product" type="checkbox">}
-                                    <span class="slider round"></span>
-                                </label>
+                            <tr>
+                                <td>@stt</td>
+                                <td class="text-center">@Html.DisplayFor(modelItem => item.ProductId)</td>
+                                <td><img src="~/Public/images/products/@Html.DisplayFor(modelItem => item.ProductImg)" alt="Error" width="70" class="d-block m-auto" />  </td>
+                                <td><a href="~/Admin/Product/Details/@item.ProductId">@Html.DisplayFor(modelItem => item.ProductName)</a>  </td>
+                                <td>
+                                    @foreach(var item2  in ViewBag.branch)
+                                    {
+                                        if(item2.Id == item.OwnerId)
+                                        {
+                                            <p>@item2.Name</p>
+                                        }
+                                    }
+                                </td>
+                                <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
+                                <td class="text-center">
+                                    <label class="switch">
+                                        @if (item.ProductDiscount == 1)
+                                        {<input class="changeDiscount" data-id="@item.ProductId" data-controller="Product" type="checkbox" checked>}
+                                        else
+                                        {<input class="changeDiscount" data-id="@item.ProductId" data-controller="Product" type="checkbox">}
+                                        <span class="slider round"></span>
+                                    </label>
 
-                            </td>
-                            <td class="text-center">
-                                <label class="switch">
-                                    @if (item.ProductStatus == 1)
-                                    {<input class="changeStatus" data-id="@item.ProductId" data-controller="Product" type="checkbox" checked>}
-                                    else
-                                    {<input class="changeStatus" data-id="@item.ProductId" data-controller="Product" type="checkbox">}
-                                    <span class="slider round"></span>
-                                </label>
-                                <button type="button" class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="Chỉnh sửa">
-                                    <a href="@Url.Action("Edit", "Product", new { id = item.ProductId })" class="text-white"><i class="fas fa-pen"></i></a>
-                                </button>
-                                <button type="button" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Xóa">
-                                    <a href="@Url.Action("DelTrash", "Product", new { id = item.ProductId })" class="text-white"><i class="far fa-trash-alt"></i></a>
-                                </button>
-                            </td>
-                        </tr>
+                                </td>
+                                <td class="text-center">
+                                    <label class="switch">
+                                        @if (item.ProductStatus == 1)
+                                        {<input class="changeStatus" data-id="@item.ProductId" data-controller="Product" type="checkbox" checked>}
+                                        else
+                                        {<input class="changeStatus" data-id="@item.ProductId" data-controller="Product" type="checkbox">}
+                                        <span class="slider round"></span>
+                                    </label>
+                                    @{ 
+                                        var namea = "#modal-secondary" + item.ProductId;
+                                        var nameb = "modal-secondary" + item.ProductId;
+                                    }
+                                    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="@namea" title="Thêm chi nhánh">
+                                        <a  class="text-white"><i class="fas fa-plus fa-xs"></i></a>
+                                    </button>
+                                    <button type="button" class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="Chỉnh sửa">
+                                        <a href="@Url.Action("Edit", "Product", new { id = item.ProductId })" class="text-white"><i class="fas fa-pen"></i></a>
+                                    </button>
+                                    <button type="button" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Xóa">
+                                        <a href="@Url.Action("DelTrash", "Product", new { id = item.ProductId })" class="text-white"><i class="far fa-trash-alt"></i></a>
+                                    </button>
+                                </td>
+                            </tr>
                             stt++;
+                            <div class="modal fade" id="@nameb">
+                                <form action="/Product/AddBranch" method="post">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content bg-light">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Chọn chi nhánh muốn thêm</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body bg-white">
+                                                <div class="form-group">
+                                                    <label class="control-label">Chọn chi nhánh</label>
+                                                <div class="">
+                                                    <input type="hidden" name="idProduct" value="@item.ProductId"/>
+                                                    <select class="form-control" name="chiNhanh" aria-label="Default select example">
+                                                        <option selected>Chi nhánh</option>
+                                                        @foreach (var item1 in ViewBag.branch)
+                                                        {
+                                                            <option value="@item1.Id">@item1.Name</option>
+                                                        }
+
+                                                    </select>
+                                    
+                                                </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer justify-content-between">
+                                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+                                                <button type="submit" class="changeStatusOrder btn btn-secondary">Thêm</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                              
+                            </div>
                         }
                     </tbody>
                 </table>
