--- a/WebsiteBanDoGiaDung/Areas/Admin/Views/Product/Index.cshtml
+++ b/WebsiteBanDoGiaDung/Areas/Admin/Views/Product/Index.cshtml
@@ -100,7 +100,7 @@
                                     <div class="modal-dialog">
                                         <div class="modal-content bg-light">
                                             <div class="modal-header">
-                                                <h5 class="modal-title">Chọn chi nhánh muốn thêm</h5>
+                                                <h5 class="modal-title">Chọn chi nhánh muốn thêm cho : @item.ProductName</h5>
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
                                                 </button>
